[package]
name = "relnet"
version = "0.1.0"
edition = "2021"
description = "A minimal implementation of telnet."
repository = "https://github.com/didoloan/relnet.git"
homepage = "https://github.com/didoloan/relnet.git"

[dependencies]
async-lock = "3.4.0"
clap = "4.5.21"
clap_derive = "4.5.13"
monoio = { version = "0.2.4", features = ["ctrlc"] }
monoio-compat = "0.2.2"
monoio-rustls = "0.4.0"
rustls = "0.23.4"
webpki = "0.22.4"
webpki-roots = "0.26.7"
